
Changelog
=========

2018.5.8 (unreleased)
---------------------

- Fix performance issue with search root exclusion in tabbed view listings. [lgraf]


2018.5.7 (2019-01-08)
---------------------

- Make sure a failure to update DocProperties doesn't prevent checkin/checkout or moving of documents. [lgraf]
- Fix invalid end dates of resolved subdossiers when resolving main dossier. [njohner]
- Fixed attaching mails to mail via Office Connector. [Rotonen]
- Remove plonetheme.teamraum upgradesteps. [phgross]


2018.5.6 (2018-12-17)
---------------------

- Bump docxcompose to 1.0.0a15 for bugfixes. [deiferni]
- Set changed date on ObjectAdded instead of ObjectCreatedEvent. [phgross]
- Invalidate cached zip export app. [deiferni]


2018.5.5 (2018-12-10)
---------------------

- Fix task revoking permissions on close/reassign. [phgross]
- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]


2018.5.4 (2018-12-06)
---------------------

- Add missing changed index to solr and fix tabbedview helper fallback. [phgross]
- Bump docxcompose to 1.0.0a14 for better handling of referenced parts. [deiferni]
- Fix filesize, filename and file extension upgradestep for deployments using solr. [phgross]
- Fix an issue with meeting template titles. [deiferni]


2018.5.3 (2018-11-29)
---------------------

- Bump ftw.bumblebee to 3.7.1 to get fix to avoid calculating all indexed on document update. [lgraf]


2018.5.2 (2018-11-28)
---------------------

- Fix bug in favorites to support objects with long titles. [njohner]
- Return review_state ID in API summaries and introduce a new review_state_label attribute instead. [phgross]
- Fix quotation error and missing translations for task and dossier PDFs. [njohner]
- Make ReindexTaskPrincipalsInGlobalindex upgradestep more robust. [phgross]
- Show one line of each title and description in livesearch result. [njohner]


2018.5.1 (2018-11-23)
---------------------
